# python-projects

./: README.md  assistant_config.json  requirements.md  ultron_oop.py
Advance calculator/: README.md  main.py  requirements.txt
Advance calculator/modules/: __init__.py  basic_operations.py  conversion_operations.py  display.py  financial_operations.py  history_manager.py  memory_manager.py  scientific_operations.py  validator.py
BankManagementSystem/: README.md  main.py  requirements.txt  tempCodeRunnerFile.py
BankManagementSystem/data/: bank.db
BankManagementSystem/modules/: __init__.py  account.py  customer.py  database.py  reports.py  transaction.py  utils.py
BasicPasswordManager/: data.json  main.py  moderate_password_manager.py  pyproject.toml
Black Jack/: blackjack.py
EVMsystem/: README.md  main.py  requirements.txt
EVMsystem/modules/: __init__.py  auth.py  candidate.py  database.py  election.py  results.py  security.py  voter.py  voting.py
ExpenseTracker/: auth_manager.py  currency_converter.py  expense_tracker.py  main.py  prediction_engine.py  requirements.txt
LibaryManagement/: README.md  __init__.py  main.py  requirements.txt  setup.py
LibaryManagement/modules/: __init__.py  (+5 more)
MedicalStoreManagement/: main.py  requirements.txt
TicTacToe/: README.md  main.py  requirements.txt
academicManagement/: __init__.py  academic_management.db  auth.py  course_management.py  database.py  faculty_management.py  grade_management.py  main.py  models.py  student_management.py  utils.py
password-manager-GUI/: password_manager.py  pyproject.toml
(+24 files in other folders)
