[tool.poetry]
name = "password-manager"
version = "0.3.0"
description = ""
authors = ["webjamil101 <webjamil101@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyperclip = "^1.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
